adding topNav, router change

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve"
+    "start": "webpack serve --mode development"
   },
   "dependencies": {
     "formik": "^2.2.1",
